Revert "Add a new option to make the 'Arm Away' button acting as 'Arm Night'"
This reverts commit c129d684935622cab2629bf621742314dc3f0e88

Rebase on top of main

--- a/custom_components/securitas/translations/en.json
+++ b/custom_components/securitas/translations/en.json
@@ -11,6 +11,7 @@
                     "use_2FA": "Use 2FA",
                     "country": "Country Code",
                     "code": "PIN Code (leave empty for no PIN)",
+                    "code_arm_required": "PIN code is required to arm?",
                     "PERI_alarm": "Is there a Perimetral alarm?",
                     "check_alarm_panel": "Check alarm panel's status in every request",
                     "scan_interval": "Update scan interval (sec)",
@@ -34,6 +35,7 @@
             "init": {
                 "data": {
                     "code": "PIN Code (leave empty for no PIN)",
+                    "code_arm_required": "PIN code is required to arm?",
                     "PERI_alarm": "Is there a Perimetral alarm?",
                     "check_alarm_panel": "Check alarm panel's status in every request (not recommended)",
                     "scan_interval": "Update scan interval (sec)",
